--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -43,6 +43,10 @@
     </div>
 
 
+    <div class="flex justify-end mt-2 mb-2"  routerLink="/forgotpassverify"> 
+      <p class="text-red-700 text-xs font-bold">Don't have an account ?</p>
+          </div>
+
 
     <div class="flex justify-center mt-10 pl-3 pr-3" routerLink="/forgotpassverify">
       <p class="bg-yellow-300 text-white rounded-md p-2 pl-3 pr-3">Forgot Password</p>
