--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -44,7 +44,7 @@
 
 
     <div class="flex justify-end mt-2 mb-2"  routerLink="/forgotpassverify"> 
-      <p class="text-red-700 text-xs font-bold">Don't have an account ?</p>
+      <p class="text-red-700 text-xs font-bold">Don't have an account Register?</p>
           </div>
 
 
